<resources>
    <string name="app_name">Social</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_phone_hint">email or phone</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgotpassword">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="company_name">Company name</string>
    <string name="title">Title</string>
    <string name="passwordHint">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <!--<string name="email">Email</string>-->
    <string name="last_name">last name</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="commentsarea">Comments Area</string>
    <string name="validate">validate</string>
    <string name="code">Code</string>
    <string name="verCodeMess">Please enter verification code</string>
    <string name="send">send</string>
    <string name="Password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="setPassword">Set Password</string>
    <string name="post">Post</string>
    <string name="write_post">Write post</string>
</resources>
