<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp">

    <RelativeLayout
        android:id="@+id/layout_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_150sdp"
        tools:context=".Fragments.ForgetPassFragment"
        android:visibility="visible">

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAlignment="center"
            android:background="@drawable/round_text"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/btn_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_centerInParent="true"
            android:text="@string/validate"
            android:background="@drawable/round_button"
            android:textColor="@color/white_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:context=".Fragments.ForgetPassFragment">

        <TextView
            android:id="@+id/txt_message_to_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verCodeMess"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_message_to_enter"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/code"
            android:textAlignment="center"
            android:background="@drawable/round_text"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_code"
            android:layout_centerInParent="true"
            android:text="@string/send"
            android:background="@drawable/round_button"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:visibility="gone"
        tools:context=".Fragments.ForgetPassFragment">


        <EditText
            android:id="@+id/edt_pss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:background="@drawable/round_text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_con_pss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_pss"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:background="@drawable/round_text"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_con_pss"
            android:layout_centerInParent="true"
            android:text="@string/setPassword"
            android:background="@drawable/round_button"
            />
    </RelativeLayout>

</RelativeLayout>