<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/enteremailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_text"
            android:hint="@string/email_or_phone_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_15sdp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/enterpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enteremailtext"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:autofillHints="no"
            android:background="@drawable/round_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_15sdp"
            tools:targetApi="o" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterpassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold|italic" />

        <RelativeLayout
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp">


            <TextView
                android:id="@+id/forgotpasswordbutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/forgotpassword"
                android:textAlignment="center"
                android:textColor="#2196F3"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/registerbutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#2196F3"
                android:textStyle="bold|italic"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>